Rename all re:dash/Re:dash to Readsh. Closes #1396.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
-    <a href="http://redash.io">Re:dash</a> <span ng-bind="version"></span> <small ng-if="newVersionAvailable" ng-cloak class="ng-cloak"><a href="http://version.redash.io/">(New Re:dash version available)</a></small>
+    <a href="http://redash.io">Redash</a> <span ng-bind="version"></span> <small ng-if="newVersionAvailable" ng-cloak class="ng-cloak"><a href="http://version.redash.io/">(New Redash version available)</a></small>
 
     <ul class="f-menu">
         <li><a href="https://redash.io/help/">Documentation</a></li>
