--- a/templates/invite.html
+++ b/templates/invite.html
@@ -19,7 +19,7 @@
 {% endwith %}
 {% if google_auth_url %}
 <div class="row">
-    <a href="{{ google_auth_url }}"><img src="/google_login.png" class="login-button"/></a>
+    <a href="{{ google_auth_url }}"><img src="/images/google_login.png" class="login-button"/></a>
 </div>
 <div class="login-or">
     <hr class="hr-or">
