--- a/templates/login.html
+++ b/templates/login.html
@@ -41,6 +41,17 @@
   </div>
   {% endif %}
 
+  {% if show_ldap_login %}
+  <div class="row">
+    <a href="/ldap_auth/login">LDAP/SSO Login</a>
+  </div>
+
+  <div class="login-or">
+    <hr class="hr-or">
+    <span class="span-or">or</span>
+  </div>
+  {% endif %}
+
   <form role="form" method="post" name="login">
     <div class="form-group">
       <label for="inputEmail">Email</label>
