--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,5 @@
 <footer id="footer">
     <a href="http://redash.io">Redash</a> <span ng-bind="version"></span> <small ng-if="newVersionAvailable" ng-cloak class="ng-cloak"><a href="http://version.redash.io/">(New Redash version available)</a></small>
-
-    <ul class="f-menu">
-        <li><a href="https://redash.io/help/">Documentation</a></li>
-        <li><a href="http://github.com/getredash/redash">Contribute</a></li>
-    </ul>
+    <a href="https://redash.io/help/">Documentation</a>
+    <a href="http://github.com/getredash/redash">Contribute</a>
 </footer>
