--- a/templates/layouts/signed_out.html
+++ b/templates/layouts/signed_out.html
@@ -8,20 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link rel="stylesheet" href="/styles/superflat_redash.css">
-    <link rel="stylesheet" href="/styles/redash.css">
-    <link rel="stylesheet" href="/styles/login.css">
+    <link rel="stylesheet" href="{{ asset_url('app.css') }}">
+    <link rel="stylesheet" href="/static/styles/login.css">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/static/images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
 </head>
 <body>
 
 <div style="position: absolute; width: 100%; height: 100%;">
   <div class="logo-container">
     <div style="display:table-cell; vertical-align:middle;" class="text-center">
-      <img src="/images/logo_white.png" style="width: 184px; height: 96px;">
+      <img src="/static/images/logo_white.png" style="width: 184px; height: 96px;">
     </div>
   </div>
 
@@ -35,7 +34,7 @@
   </div>
 </div>
 
-<script src="/js/jquery.min.js"></script>
+<script src="/static/js/jquery.min.js"></script>
 {% block scripts %}
 {% endblock %}
 
