Add SSO login buttons to invite user page; UI fixes

--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -13,7 +13,7 @@
           <label for="email">Enter the email address you used for this account:</label>
           <input type="email" class="form-control" name="email" value="{{email}}">
         </div>
-        <button type="submit" class="btn btn-primary btn-block m-t-default">Reset my password</button>
+        <button type="submit" class="btn btn-primary btn-block m-t-25">Reset my password</button>
       </form>
     {% endif %}
   </div>
