--- a/templates/login.html
+++ b/templates/login.html
@@ -47,11 +47,11 @@
         <input type="password" class="form-control" id="inputPassword" name="password">
       </div>
 
-      <button type="submit" class="btn btn-primary btn-block m-t-default">Log In</button>
+      <button type="submit" class="btn btn-primary btn-block m-t-25">Log In</button>
     </form>
 
     {% if not hide_forgot_password %}
-      <div class="m-t-default">
+      <div class="m-t-25">
         <a href="{{ url_for("redash.forgot_password", org_slug=org_slug) }}">I forgot my password</a>
       </div>
     {% endif %}
