--- a/templates/reset.html
+++ b/templates/reset.html
@@ -17,7 +17,7 @@
         <label for="password">Enter your new password:</label>
         <input type="password" class="form-control" id="password" name="password" placeholder="Password">
       </div>
-      <button type="submit" class="btn btn-primary btn-block m-t-default">Change my password</button>
+      <button type="submit" class="btn btn-primary btn-block m-t-25">Change my password</button>
     </form>
   </div>
 </div>
