--- a/templates/invite.html
+++ b/templates/invite.html
@@ -5,13 +5,14 @@
 {% block content %}
 <div class="fixed-width-page">
   <div class="bg-white tiled">
-    <div class="m-b-default">
-      {% if google_auth_url %}
-        To create your account, please choose a password or login with your Google account ({{ user.email }}).
+    <div class="m-b-25">
+      {% if show_google_openid or show_saml_login or show_remote_user_login or show_ldap_login %}
+        To create your account, please choose a password or login with your SSO provider.
       {% else %}
         To create your account, please choose a password.
       {% endif %}
     </div>
+
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         {% for message in messages %}
@@ -20,19 +21,35 @@
       {% endif %}
     {% endwith %}
 
-    {% if google_auth_url %}
+    {% if show_google_openid %}
       <a href="{{ google_auth_url }}" class="login-button btn btn-default btn-block">
         <img src="/static/images/google_logo.svg">
         Login with Google
       </a>
+    {% endif %}
+
+    {% if show_saml_login %}
+      <a href="/saml/login" class="login-button btn btn-default btn-block">SAML Login</a>
+    {% endif %}
+
+    {% if show_remote_user_login %}
+      <a href="/remote_user/login" class="login-button btn btn-default btn-block">Remote User Login</a>
+    {% endif %}
+
+    {% if show_ldap_login %}
+      <a href="/ldap_auth/login" class="login-button btn btn-default btn-block">LDAP/SSO Login</a>
+    {% endif %}
+
+    {% if show_google_openid or show_saml_login or show_remote_user_login or show_ldap_login %}
       <hr>
     {% endif %}
+
     <form role="form" method="post" name="invite">
       <div class="form-group">
         <label for="password">Password</label>
         <input type="password" class="form-control" id="password" name="password">
       </div>
-      <button type="submit" class="btn btn-primary btn-block m-t-default">Set Password</button>
+      <button type="submit" class="btn btn-primary btn-block m-t-25">Set Password</button>
     </form>
   </div>
 </div>
