--- a/templates/layouts/signed_out.html
+++ b/templates/layouts/signed_out.html
@@ -15,10 +15,12 @@
 
 <div class="d-flex flex-column justify-content-center align-items-center">
   <div class="header">
-    <div class="text-center">
+    <div class="text-center m-b-15">
       <a href="/"><img src="/static/images/redash_icon_small.png"></a>
     </div>
-    <h3 class="text-center m-b-default">{{ self.title() }}</h3>
+    {% if not hide_page_header %}
+      <h3 class="text-center m-t-0 m-b-25">{{ self.title() }}</h3>
+    {% endif %}
   </div>
   {% block content %}{% endblock %}
 </div>
