--- a/client/app/components/footer/footer.html
+++ b/client/app/components/footer/footer.html
@@ -1,5 +1,5 @@
 <div id="footer">
-    <a href="http://redash.io">Redash</a> <span ng-bind="$ctrl.version"></span> <small ng-if="$ctrl.newVersionAvailable" ng-cloak class="ng-cloak"><a href="https://version.redash.io/">(New Redash version available)</a></small>
+    <a href="http://redash.io">Redash</a> <span ng-bind="$ctrl.version"></span> Varanus Redash <span ng-bind="$ctrl.varanus_redash_version"></span> <small ng-if="$ctrl.newVersionAvailable" ng-cloak class="ng-cloak"><a href="https://version.redash.io/">(New Redash version available)</a></small>
     &#8226;
     <a href="https://redash.io/help/">Documentation</a>
     &#8226;
