Flex embed view.

--- a/client/app/assets/less/redash/query.less
+++ b/client/app/assets/less/redash/query.less
@@ -675,3 +675,33 @@ nav .rg-bottom {
 
   }
 }
+
+.embed__vis2 {
+    display: flex;
+    flex-direction: column;
+    height: calc(~'100vh - 25px');
+}
+
+.embed__vis2 .embed-heading {
+    flex: 0 0 auto;
+}
+
+.embed__vis2 .query__vis {
+    flex: 1 1 auto;
+}
+
+.embed__vis2 .tile__bottom-control {
+    flex: 0 0 auto;
+}
+
+.embed__vis2 .plotly-chart-container {
+    height: 100%;
+}
+
+.embed__vis2 .t_body {
+    height: 100%;
+}
+
+.embed__vis2 .varanus_custom_for_embed {
+    height: 100%
+}
